--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:id="@+id/lionScr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#E8D106"
-        android:padding="2dp"
-        android:text="LION :"
+        android:background="#66E8D106"
+        android:padding="5dp"
+        android:shadowColor="#000000"
+        android:text="LION SCORE :"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:background="#08CC01"
+        android:background="#0008CC01"
         app:columnCount="3"
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,9 +152,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:background="#66019E08"
         android:shadowColor="#000000"
-        android:text="Tiger Or Lion?"
-        android:textColor="#05E40E"
+        android:text="Tiger V/S Lion"
+        android:textColor="#00DC09"
+        android:textColorHighlight="#F10808"
         android:textSize="30sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -179,9 +182,10 @@
         android:id="@+id/tigerScr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FA8E05"
-        android:padding="2dp"
-        android:text="TIGER :"
+        android:background="#4DAE660A"
+        android:padding="5dp"
+        android:shadowColor="#000000"
+        android:text="TIGER SCORE :"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
